changing header position to relative. trying to fix the upper left hand lvndlocked logo on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3378,7 +3378,7 @@
 		height: 3.25em;
 		left: 0;
 		line-height: 3.25em;
-		position: fixed;
+		position: relative;
 		text-align: right;
 		top: 0;
 		width: 100%;
